Insert and show operation working successfull

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,31 +59,51 @@
 
     <div class="container my-3">
         <h1 class="alert-danger py-3 px-2">Add your's notes</h1>
-        <form method="post" action="">
+        <form method="post" action="/">
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                <label for="title" class="form-label">Add title</label>
+                <input type="text" name="title" class="form-control" id="title" aria-describedby="title-text">
+                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
             </div>
             <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <div class="form-floating">
+                    <textarea class="form-control" name="msg" placeholder="Leave a comment here" id="floatingTextarea2"
+                        style="height: 100px"></textarea>
+                    <label for="floatingTextarea2">Add notes description</label>
+                </div>
             </div>
-            <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
+
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 
     <div class="container my-3">
         <h1 class="alert-success text-center">Notes</h1>
-        {% for item in notesData %}
-        <li><a href="{{ item.href }}">{{ item.msg }}</a></li>
-        {% endfor %}
+
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">id</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in notesData %}
+                <tr>
+                    <td scope="row">{{ item.id}}</td>
+                    <td>{{ item.title}}</td>
+                    <td>{{ item.msg }}</td>
+                    <td>@mdo</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
     </div>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
